--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,25 @@ dependencies {
   testCompile group: 'org.testng', name: 'testng', version: '6.14.3'	
 }
 
-// gradle task to be executed
+// run with the command 'gradle clean test' in CLI 
 test { 
 //this tells Gradle to use TestNG
-  useTestNG() { 
+ useTestNG() { 
        // this tells TestNG to execute its default reporting structure
        useDefaultListeners = true 
+       testLogging.showStandardStreams=true
        // location of testng.xml
        suites 'src/test/java/com/testautomation/testng/testng.xml' 
   }
+}
+
+// run with the command 'gradle clean smokeTests' in CLI 
+task smokeTests(type: Test) { 
+   useTestNG() {
+       useDefaultListeners = true
+       testLogging.showStandardStreams=true
+       suites 'src/test/java/com/testautomation/testng/testng.xml'
+       includeGroups 'Smoke'
+   }
 }
 
